updated clues, finalized counter

--- a/clue-2.html
+++ b/clue-2.html
@@ -6,27 +6,28 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./_app/immutable/assets/5.D1QyC6qQ.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DjCu92oX.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DmT_dE7U.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CwxO7OcZ.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CZK-5FPQ.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CqBt3Uns.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CdXMwl73.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/ns-Bb9eR.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/C7zf0VeO.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/ChTt-Sgp.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.CY5Vr_kT.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/5.CAaYb4kE.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Cd500uf3.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/FjzIaPhN.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BxPJaE_c.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.yasVd1Hm.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/LbnLnUc5.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DOZhaxf_.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Ctw2jfC3.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CurtmZoo.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CjIqQGcE.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Cn3XiRpo.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BldhtqCd.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/b256W9Lw.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/96AXZUVW.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.C0nB_hUn.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/5.B56SOrn4.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/7_8G6W_z.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/D8TcACvv.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Bufz9fF-.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div><!--[--><!--[--><!----><!----><main class="svelte-1j8vvuj"><!--[!--><!--]--></main><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_1dgo2tx = {
+					__sveltekit_hiwwns = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/devina-22"
 					};
@@ -34,8 +35,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DjCu92oX.js"),
-						import("./_app/immutable/entry/app.CqBt3Uns.js")
+						import("./_app/immutable/entry/start.yasVd1Hm.js"),
+						import("./_app/immutable/entry/app.CurtmZoo.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 5],
