--- a/final.html
+++ b/final.html
@@ -5,29 +5,30 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="./_app/immutable/assets/10.Cu5P8N55.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DjCu92oX.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DmT_dE7U.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CwxO7OcZ.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CZK-5FPQ.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CqBt3Uns.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CdXMwl73.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/ns-Bb9eR.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/C7zf0VeO.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/ChTt-Sgp.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.CY5Vr_kT.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/10.s58Dz-BF.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Cd500uf3.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BCweAceF.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/FjzIaPhN.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BxPJaE_c.js">
+		<link href="./_app/immutable/assets/12.Cu5P8N55.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.yasVd1Hm.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/LbnLnUc5.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DOZhaxf_.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Ctw2jfC3.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CurtmZoo.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CjIqQGcE.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Cn3XiRpo.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BldhtqCd.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/b256W9Lw.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/96AXZUVW.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.C0nB_hUn.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/12.ImIu-Bp1.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/7_8G6W_z.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BK-rmD78.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/D8TcACvv.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Bufz9fF-.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div><!--[--><!--[--><!----><!----><video autoplay muted loop playsinline reverse="" style="position: fixed; left: 0; top: 0; width: 100vw; height: 100vh; object-fit: cover; z-index: -1;"><source src="https://cdn.pixabay.com/video/2021/07/01/79764-570718544_large.mp4" type="video/mp4"/> Your browser does not support the video tag.</video> <main class="svelte-1vfb099"><!--[!--><!--]--> <!--[!--><!--]--></main><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_1dgo2tx = {
+					__sveltekit_hiwwns = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/devina-22"
 					};
@@ -35,11 +36,11 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DjCu92oX.js"),
-						import("./_app/immutable/entry/app.CqBt3Uns.js")
+						import("./_app/immutable/entry/start.yasVd1Hm.js"),
+						import("./_app/immutable/entry/app.CurtmZoo.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
-							node_ids: [0, 10],
+							node_ids: [0, 12],
 							data: [null,null],
 							form: null,
 							error: null
