--- a/sitemap.html
+++ b/sitemap.html
@@ -5,26 +5,27 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="./_app/immutable/assets/11.CQ1Ducof.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DjCu92oX.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DmT_dE7U.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CwxO7OcZ.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CZK-5FPQ.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CqBt3Uns.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CdXMwl73.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/ns-Bb9eR.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/C7zf0VeO.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/ChTt-Sgp.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.CY5Vr_kT.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/11.CvMo-B6w.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Cd500uf3.js">
+		<link href="./_app/immutable/assets/13.CQ1Ducof.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.yasVd1Hm.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/LbnLnUc5.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DOZhaxf_.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Ctw2jfC3.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CurtmZoo.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CjIqQGcE.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Cn3XiRpo.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BldhtqCd.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/b256W9Lw.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/96AXZUVW.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.C0nB_hUn.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/13.Jid09GLT.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/7_8G6W_z.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div><!--[--><!--[--><!----><!----><h1>Sitemap for development purposes only</h1> <main class="svelte-qf65xz"><button class="svelte-qf65xz">Start Page</button> <button class="svelte-qf65xz">begin( led from start page)</button> <button class="svelte-qf65xz">Clue 1</button> <button class="svelte-qf65xz">Clue 2</button> <button class="svelte-qf65xz">Clue 3</button> <button class="svelte-qf65xz">Clue 4</button> <button class="svelte-qf65xz">Clue 5</button> <button class="svelte-qf65xz">Final Clue, opened on laptop</button></main><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
+		<div><!--[--><!--[--><!----><!----><h1>Sitemap for development purposes</h1> <main class="svelte-qf65xz"><button class="svelte-qf65xz">Start Page</button> <button class="svelte-qf65xz">begin (led from start page)</button> <button class="svelte-qf65xz">Clue 1</button> <button class="svelte-qf65xz">Clue 2</button> <button class="svelte-qf65xz">Clue 3</button> <button class="svelte-qf65xz">Clue 4</button> <button class="svelte-qf65xz">Clue 5</button> <button class="svelte-qf65xz">Clue 6</button> <button class="svelte-qf65xz">Clue 7</button> <button class="svelte-qf65xz">Final Clue, opened on laptop</button></main><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_1dgo2tx = {
+					__sveltekit_hiwwns = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/devina-22"
 					};
@@ -32,11 +33,11 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DjCu92oX.js"),
-						import("./_app/immutable/entry/app.CqBt3Uns.js")
+						import("./_app/immutable/entry/start.yasVd1Hm.js"),
+						import("./_app/immutable/entry/app.CurtmZoo.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
-							node_ids: [0, 11],
+							node_ids: [0, 13],
 							data: [null,null],
 							form: null,
 							error: null
