finalized clues, updated countdown made final page

--- a/complete.html
+++ b/complete.html
@@ -5,7 +5,6 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="./_app/immutable/assets/6.DRnDi3Ur.css" rel="stylesheet">
 		<link rel="modulepreload" href="./_app/immutable/entry/start.QQiJtaYI.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DQANlBWU.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Dcm-RTuh.js">
@@ -17,14 +16,11 @@
 		<link rel="modulepreload" href="./_app/immutable/chunks/CuRRGoEt.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D-246sFe.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.D9hh3Xmz.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/6.ekMLxuP2.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/11.CFKM3YCq.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D5hF4q50.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/J224mmEL.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DjyCQ2yY.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/D1ll56pE.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div><!--[--><!--[--><!----><!----><main class="svelte-e9qvqx"><!--[!--><!--]--> <!--[!--><!--]--></main><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
+		<div><!--[--><!--[--><!----><!----><!---->Hello World<!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
@@ -40,7 +36,7 @@
 						import("./_app/immutable/entry/app.CBUIfoHZ.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
-							node_ids: [0, 6],
+							node_ids: [0, 11],
 							data: [null,null],
 							form: null,
 							error: null
