--- a/sitemap.html
+++ b/sitemap.html
@@ -5,27 +5,27 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="./_app/immutable/assets/13.CQ1Ducof.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.yasVd1Hm.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/LbnLnUc5.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DOZhaxf_.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Ctw2jfC3.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CurtmZoo.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CjIqQGcE.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Cn3XiRpo.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BldhtqCd.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/b256W9Lw.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/96AXZUVW.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.C0nB_hUn.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/13.Jid09GLT.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/7_8G6W_z.js">
+		<link href="./_app/immutable/assets/14.CQ1Ducof.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.QQiJtaYI.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DQANlBWU.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Dcm-RTuh.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BuiDMpFk.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CBUIfoHZ.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CWLHDdO0.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/C-zqwFdH.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BRvlD9YN.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CuRRGoEt.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/D-246sFe.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.D9hh3Xmz.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/14.B8yBT4ih.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/D5hF4q50.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div><!--[--><!--[--><!----><!----><h1>Sitemap for development purposes</h1> <main class="svelte-qf65xz"><button class="svelte-qf65xz">Start Page</button> <button class="svelte-qf65xz">begin (led from start page)</button> <button class="svelte-qf65xz">Clue 1</button> <button class="svelte-qf65xz">Clue 2</button> <button class="svelte-qf65xz">Clue 3</button> <button class="svelte-qf65xz">Clue 4</button> <button class="svelte-qf65xz">Clue 5</button> <button class="svelte-qf65xz">Clue 6</button> <button class="svelte-qf65xz">Clue 7</button> <button class="svelte-qf65xz">Final Clue, opened on laptop</button></main><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_hiwwns = {
+					__sveltekit_1f3v9co = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/devina-22"
 					};
@@ -33,11 +33,11 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.yasVd1Hm.js"),
-						import("./_app/immutable/entry/app.CurtmZoo.js")
+						import("./_app/immutable/entry/start.QQiJtaYI.js"),
+						import("./_app/immutable/entry/app.CBUIfoHZ.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
-							node_ids: [0, 13],
+							node_ids: [0, 14],
 							data: [null,null],
 							form: null,
 							error: null
