--- a/clue-2.html
+++ b/clue-2.html
@@ -6,28 +6,28 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./_app/immutable/assets/5.D1QyC6qQ.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.yasVd1Hm.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/LbnLnUc5.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DOZhaxf_.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Ctw2jfC3.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CurtmZoo.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CjIqQGcE.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Cn3XiRpo.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BldhtqCd.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/b256W9Lw.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/96AXZUVW.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.C0nB_hUn.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/5.B56SOrn4.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/7_8G6W_z.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/D8TcACvv.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Bufz9fF-.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.QQiJtaYI.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DQANlBWU.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Dcm-RTuh.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BuiDMpFk.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CBUIfoHZ.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CWLHDdO0.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/C-zqwFdH.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BRvlD9YN.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CuRRGoEt.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/D-246sFe.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.D9hh3Xmz.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/5.Bg1PGWKy.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/D5hF4q50.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DjyCQ2yY.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/D1ll56pE.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div><!--[--><!--[--><!----><!----><main class="svelte-1j8vvuj"><!--[!--><!--]--></main><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_hiwwns = {
+					__sveltekit_1f3v9co = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/devina-22"
 					};
@@ -35,8 +35,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.yasVd1Hm.js"),
-						import("./_app/immutable/entry/app.CurtmZoo.js")
+						import("./_app/immutable/entry/start.QQiJtaYI.js"),
+						import("./_app/immutable/entry/app.CBUIfoHZ.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 5],
