--- a/final.html
+++ b/final.html
@@ -5,30 +5,30 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="./_app/immutable/assets/12.Cu5P8N55.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.yasVd1Hm.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/LbnLnUc5.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DOZhaxf_.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Ctw2jfC3.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CurtmZoo.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CjIqQGcE.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Cn3XiRpo.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BldhtqCd.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/b256W9Lw.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/96AXZUVW.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.C0nB_hUn.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/12.ImIu-Bp1.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/7_8G6W_z.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BK-rmD78.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/D8TcACvv.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Bufz9fF-.js">
+		<link href="./_app/immutable/assets/13.Cu5P8N55.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.QQiJtaYI.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DQANlBWU.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Dcm-RTuh.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BuiDMpFk.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CBUIfoHZ.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CWLHDdO0.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/C-zqwFdH.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BRvlD9YN.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CuRRGoEt.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/D-246sFe.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.D9hh3Xmz.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/13.DOTEHfdq.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/D5hF4q50.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/J224mmEL.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DjyCQ2yY.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/D1ll56pE.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div><!--[--><!--[--><!----><!----><video autoplay muted loop playsinline reverse="" style="position: fixed; left: 0; top: 0; width: 100vw; height: 100vh; object-fit: cover; z-index: -1;"><source src="https://cdn.pixabay.com/video/2021/07/01/79764-570718544_large.mp4" type="video/mp4"/> Your browser does not support the video tag.</video> <main class="svelte-1vfb099"><!--[!--><!--]--> <!--[!--><!--]--></main><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
+		<div><!--[--><!--[--><!----><!----><video autoplay muted loop playsinline reverse="" style="position: fixed; left: 0; top: 0; width: 100vw; height: 100vh; object-fit: cover; z-index: -1;"><source src="https://cdn.pixabay.com/video/2021/07/01/79764-570718544_large.mp4" type="video/mp4"/> Your browser does not support the video tag.</video> <main class="svelte-1vfb099"><!--[!--><!--]--> <!--[!--><!--]--> <!--[!--><!--]--></main><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_hiwwns = {
+					__sveltekit_1f3v9co = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/devina-22"
 					};
@@ -36,11 +36,11 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.yasVd1Hm.js"),
-						import("./_app/immutable/entry/app.CurtmZoo.js")
+						import("./_app/immutable/entry/start.QQiJtaYI.js"),
+						import("./_app/immutable/entry/app.CBUIfoHZ.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
-							node_ids: [0, 12],
+							node_ids: [0, 13],
 							data: [null,null],
 							form: null,
 							error: null
