updated final page

--- a/200.html
+++ b/200.html
@@ -5,11 +5,11 @@
 		<link rel="icon" href="/devina-22/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/devina-22/_app/immutable/entry/start.QQiJtaYI.js">
-		<link rel="modulepreload" href="/devina-22/_app/immutable/chunks/DQANlBWU.js">
+		<link rel="modulepreload" href="/devina-22/_app/immutable/entry/start.DM99W-2q.js">
+		<link rel="modulepreload" href="/devina-22/_app/immutable/chunks/CDzCKeid.js">
 		<link rel="modulepreload" href="/devina-22/_app/immutable/chunks/Dcm-RTuh.js">
 		<link rel="modulepreload" href="/devina-22/_app/immutable/chunks/BuiDMpFk.js">
-		<link rel="modulepreload" href="/devina-22/_app/immutable/entry/app.CBUIfoHZ.js">
+		<link rel="modulepreload" href="/devina-22/_app/immutable/entry/app.DNyy4wx7.js">
 		<link rel="modulepreload" href="/devina-22/_app/immutable/chunks/CWLHDdO0.js">
 		<link rel="modulepreload" href="/devina-22/_app/immutable/chunks/C-zqwFdH.js">
 		<link rel="modulepreload" href="/devina-22/_app/immutable/chunks/BRvlD9YN.js">
@@ -20,7 +20,7 @@
 		<div>
 			<script>
 				{
-					__sveltekit_1f3v9co = {
+					__sveltekit_196p1qq = {
 						base: "/devina-22",
 						assets: "/devina-22"
 					};
@@ -28,8 +28,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/devina-22/_app/immutable/entry/start.QQiJtaYI.js"),
-						import("/devina-22/_app/immutable/entry/app.CBUIfoHZ.js")
+						import("/devina-22/_app/immutable/entry/start.DM99W-2q.js"),
+						import("/devina-22/_app/immutable/entry/app.DNyy4wx7.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
