--- a/clue-3.html
+++ b/clue-3.html
@@ -6,18 +6,18 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./_app/immutable/assets/6.DRnDi3Ur.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.QQiJtaYI.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DQANlBWU.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DM99W-2q.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CDzCKeid.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Dcm-RTuh.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BuiDMpFk.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CBUIfoHZ.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.DNyy4wx7.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CWLHDdO0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/C-zqwFdH.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BRvlD9YN.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CuRRGoEt.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D-246sFe.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.D9hh3Xmz.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/6.ekMLxuP2.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/6.15Lw6n4C.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D5hF4q50.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/J224mmEL.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DjyCQ2yY.js">
@@ -28,7 +28,7 @@
 			
 			<script>
 				{
-					__sveltekit_1f3v9co = {
+					__sveltekit_196p1qq = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/devina-22"
 					};
@@ -36,8 +36,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.QQiJtaYI.js"),
-						import("./_app/immutable/entry/app.CBUIfoHZ.js")
+						import("./_app/immutable/entry/start.DM99W-2q.js"),
+						import("./_app/immutable/entry/app.DNyy4wx7.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 6],
