--- a/complete.html
+++ b/complete.html
@@ -5,11 +5,11 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="./_app/immutable/entry/start.QQiJtaYI.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DQANlBWU.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DM99W-2q.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CDzCKeid.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Dcm-RTuh.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BuiDMpFk.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CBUIfoHZ.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.DNyy4wx7.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CWLHDdO0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/C-zqwFdH.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BRvlD9YN.js">
@@ -24,7 +24,7 @@
 			
 			<script>
 				{
-					__sveltekit_1f3v9co = {
+					__sveltekit_196p1qq = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/devina-22"
 					};
@@ -32,8 +32,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.QQiJtaYI.js"),
-						import("./_app/immutable/entry/app.CBUIfoHZ.js")
+						import("./_app/immutable/entry/start.DM99W-2q.js"),
+						import("./_app/immutable/entry/app.DNyy4wx7.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 11],
