--- a/clue-3.html
+++ b/clue-3.html
@@ -5,30 +5,30 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="./_app/immutable/assets/6.DRnDi3Ur.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DM99W-2q.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CDzCKeid.js">
+		<link href="./_app/immutable/assets/6.BW_NWYPa.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DvExBenw.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DXxahNjx.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Dcm-RTuh.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BuiDMpFk.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.DNyy4wx7.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.nIuENfce.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CWLHDdO0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/C-zqwFdH.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BRvlD9YN.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CuRRGoEt.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D-246sFe.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.D9hh3Xmz.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/6.15Lw6n4C.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/6.BY1gFnS4.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D5hF4q50.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/J224mmEL.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DjyCQ2yY.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D1ll56pE.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div><!--[--><!--[--><!----><!----><main class="svelte-e9qvqx"><!--[!--><!--]--> <!--[!--><!--]--></main><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
+		<div><!--[--><!--[--><!----><!----><main class="svelte-4607at"><!--[!--><!--]--> <!--[!--><!--]--></main><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_196p1qq = {
+					__sveltekit_11zwurc = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/devina-22"
 					};
@@ -36,8 +36,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DM99W-2q.js"),
-						import("./_app/immutable/entry/app.DNyy4wx7.js")
+						import("./_app/immutable/entry/start.DvExBenw.js"),
+						import("./_app/immutable/entry/app.nIuENfce.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 6],
