--- a/clue-5.html
+++ b/clue-5.html
@@ -5,29 +5,29 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="./_app/immutable/assets/8.l_5qX7Dx.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DM99W-2q.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CDzCKeid.js">
+		<link href="./_app/immutable/assets/4.CQWj582h.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DvExBenw.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DXxahNjx.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Dcm-RTuh.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BuiDMpFk.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.DNyy4wx7.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.nIuENfce.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CWLHDdO0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/C-zqwFdH.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BRvlD9YN.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CuRRGoEt.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D-246sFe.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.D9hh3Xmz.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/8.BUB4Q1pm.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/8.BBl83ppN.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D5hF4q50.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DjyCQ2yY.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D1ll56pE.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div><!--[--><!--[--><!----><!----><main class="svelte-yrm20d"><!--[!--><!--]--></main><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
+		<div><!--[--><!--[--><!----><!----><main class="svelte-13iskfx"><!--[!--><!--]--></main><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_196p1qq = {
+					__sveltekit_11zwurc = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/devina-22"
 					};
@@ -35,8 +35,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DM99W-2q.js"),
-						import("./_app/immutable/entry/app.DNyy4wx7.js")
+						import("./_app/immutable/entry/start.DvExBenw.js"),
+						import("./_app/immutable/entry/app.nIuENfce.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 8],
