final clue updates and fixes

--- a/200.html
+++ b/200.html
@@ -5,11 +5,11 @@
 		<link rel="icon" href="/devina-22/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/devina-22/_app/immutable/entry/start.DvExBenw.js">
-		<link rel="modulepreload" href="/devina-22/_app/immutable/chunks/DXxahNjx.js">
+		<link rel="modulepreload" href="/devina-22/_app/immutable/entry/start.Bm2dusjs.js">
+		<link rel="modulepreload" href="/devina-22/_app/immutable/chunks/B3tB3vCx.js">
 		<link rel="modulepreload" href="/devina-22/_app/immutable/chunks/Dcm-RTuh.js">
 		<link rel="modulepreload" href="/devina-22/_app/immutable/chunks/BuiDMpFk.js">
-		<link rel="modulepreload" href="/devina-22/_app/immutable/entry/app.nIuENfce.js">
+		<link rel="modulepreload" href="/devina-22/_app/immutable/entry/app.CzjV0M1o.js">
 		<link rel="modulepreload" href="/devina-22/_app/immutable/chunks/CWLHDdO0.js">
 		<link rel="modulepreload" href="/devina-22/_app/immutable/chunks/C-zqwFdH.js">
 		<link rel="modulepreload" href="/devina-22/_app/immutable/chunks/BRvlD9YN.js">
@@ -20,7 +20,7 @@
 		<div>
 			<script>
 				{
-					__sveltekit_11zwurc = {
+					__sveltekit_1kfq6uz = {
 						base: "/devina-22",
 						assets: "/devina-22"
 					};
@@ -28,8 +28,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/devina-22/_app/immutable/entry/start.DvExBenw.js"),
-						import("/devina-22/_app/immutable/entry/app.nIuENfce.js")
+						import("/devina-22/_app/immutable/entry/start.Bm2dusjs.js"),
+						import("/devina-22/_app/immutable/entry/app.CzjV0M1o.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
