--- a/clue-3.html
+++ b/clue-3.html
@@ -6,18 +6,18 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./_app/immutable/assets/6.BW_NWYPa.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DvExBenw.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DXxahNjx.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.Bm2dusjs.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/B3tB3vCx.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Dcm-RTuh.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BuiDMpFk.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.nIuENfce.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CzjV0M1o.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CWLHDdO0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/C-zqwFdH.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BRvlD9YN.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CuRRGoEt.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D-246sFe.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.D9hh3Xmz.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/6.BY1gFnS4.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/6.yjxdrtpB.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D5hF4q50.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/J224mmEL.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DjyCQ2yY.js">
@@ -28,7 +28,7 @@
 			
 			<script>
 				{
-					__sveltekit_11zwurc = {
+					__sveltekit_1kfq6uz = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/devina-22"
 					};
@@ -36,8 +36,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DvExBenw.js"),
-						import("./_app/immutable/entry/app.nIuENfce.js")
+						import("./_app/immutable/entry/start.Bm2dusjs.js"),
+						import("./_app/immutable/entry/app.CzjV0M1o.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 6],
